# c-web-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: main.c
public/static/: index.html
src/: client.c  client.h  http_data.c  http_data.h  linked_list.c  linked_list.h  process_request.c  process_request.h  process_response.c  process_response.h  route.c  route.h  server.c  server.h
